--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.EventActivity"></activity>
+        <activity android:name=".activity.ParticipantActivity"></activity>
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
